# univer_audio

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build_debug.sh  generate_vs_solution.bat  univerAudio.sln
.github/workflows/: cmake.yml
cmake/: FindFMOD.cmake
examples/: CMakeLists.txt
examples/src/: Sandbox.cpp
examples/src/utils/: FileLoaderHelper.c  FileLoaderHelper.h
include/univer_audio/: UAudioEngine.h
lib/fmod-2.02/lib/x64/linux/: libfmodL.so.12
lib/fmod-2.02/lib/x64/macOS/: libfmod.dylib
src/: UAEImplementation.cpp  UAEImplementation.h  UAUtils.cpp  UAUtils.h  UAudioEngine.cpp  UAudioFader.cpp  UAudioFader.h  UChannel.cpp  UChannel.h  USound.cpp  USound.h
univerAudio/: univerAudio.vcxproj  univerAudio.vcxproj.filters
univerAudio/src/: Sandbox.cpp  UAudioEngine.h
univerAudio/src/engine/: UAudioEngine.cpp  UAudioEngine.h  UAudioFader.h  USound.cpp  USound.h  UVector3.h
univerAudio/src/private/: UAudioEngine.cpp  UAudioFader.cpp  USound.h
univerAudioSandbox/: univerAudioSandbox.vcxproj  univerAudioSandbox.vcxproj.filters
univerAudioSandbox/src/: Sandbox.cpp
